force-app/main/default/objects/Renewal_Creation_Rule__mdt/Renewal_Creation_Rule__mdt.object-meta.xml
<CustomObject>
    <description
  >Drives the renewal-creation scheduled job: how many days before Contract.Subscription_End_Date__c should we spawn the renewal Opp, and who owns it, partitioned by Support_Tier__c and Sales_Motion__c.</description>
    <label>Renewal Creation Rule</label>
    <pluralLabel>Renewal Creation Rules</pluralLabel>
</CustomObject>