force-app/main/default/objects/Renewal_Creation_Rule__mdt/fields/Days_Before_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Days_Before_Renewal__c</fullName>
    <description
  >How many days before Contract.Subscription_End_Date__c the renewal job should spawn the renewal Opportunity. Typical values: 90 for Premium tiers, 60 for Standard. Compared against Contract.Days_To_Renewal__c.</description>
    <inlineHelpText
  >Days ahead of the end date to spawn the renewal.</inlineHelpText>
    <label>Days Before Renewal</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>