force-app/main/default/objects/Renewal_Creation_Rule__mdt/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <description
  >DeveloperName of the Role whose pool owns the spawned renewal Opportunity (typically the source Account's CSM via Customer_Success_Director, or an Enterprise AE for high-touch deals).</description>
    <inlineHelpText
  >DeveloperName of the Role owning the new renewal Opp.</inlineHelpText>
    <label>Owner Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>