force-app/main/default/objects/Renewal_Creation_Rule__mdt/fields/Sales_Motion__c.field-meta.xml
<CustomField>
    <fullName>Sales_Motion__c</fullName>
    <description>Sales motion to stamp on the spawned renewal Opportunity. Typically 'Renewal' — kept configurable so rare expansion-on-renewal paths can use 'Expansion'. Inline value set duplicating Northstar_Sales_Motion GVS (GVS not supported on MDT).</description>
    <inlineHelpText>Sales motion to set on the renewal Opportunity.</inlineHelpText>
    <label>Sales Motion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Logo</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Services Only</fullName>
            </value>
            <value>
                <fullName>Partner Sourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>