force-app/main/default/objects/Renewal_Creation_Rule__mdt/fields/Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier__c</fullName>
    <description>Contract support tier this renewal rule applies to. Inline value set duplicating Northstar_Support_Tier GVS (GVS not supported on MDT). Premium tiers typically renew earlier than Standard.</description>
    <inlineHelpText>Support tier this renewal rule applies to.</inlineHelpText>
    <label>Support Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium Standard</fullName>
            </value>
            <value>
                <fullName>Premium Enterprise</fullName>
            </value>
            <value>
                <fullName>24x7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>